--- a/scss/blocks/filter.scss
+++ b/scss/blocks/filter.scss
@@ -15,10 +15,6 @@
     color: $text;
     opacity: 0.6;
     user-select: none;
-    &:hover:not(.active) {
-      color: $orange;
-      opacity: 1;
-    }
     &.active {
       opacity: 1;
       cursor: default;
@@ -29,7 +25,6 @@
     height: 77px;
     overflow-x: auto;
     overflow-y: hidden;
-    overflow: auto;
     -ms-overflow-style: none;
     scrollbar-width: none;
     &::-webkit-scrollbar {
@@ -56,10 +51,6 @@
     color: $text;
     white-space: nowrap;
     user-select: none;
-    &:hover:not(.active) {
-      background-color: #fff;
-      box-shadow: 0 0 10px rgba(0, 0, 0, .2);
-    }
     &.active {
       box-shadow: inset -1px -1px 3px rgba(255, 255, 255, 0.8), inset -6px -6px 5px rgba(255, 255, 255, 0.3), inset 1px 1px 3px rgba(0, 0, 0, 0.15), inset 6px 6px 5px rgba(0, 0, 0, 0.06);
       cursor: default;
@@ -72,6 +63,26 @@
       position: fixed;
       top: 0;
       left: 0;
+    }
+  }
+  &__slider {
+    width: 100%;
+    .swiper-slide {
+      width: auto !important;
+    }
+  }
+  @media (min-width: $break_sm + 1) {
+    &__link {
+      &:hover:not(.active) {
+        color: $orange;
+        opacity: 1;
+      }
+    }
+    &__category {
+      &:hover:not(.active) {
+        background-color: #fff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+      }
     }
   }
   @media (max-width: $break_sm) {
