--- a/scss/style.scss
+++ b/scss/style.scss
@@ -79,6 +79,7 @@ $gray: #E9E9E9;
 @import 'blocks/filter';
 @import 'blocks/catalog';
 @import 'blocks/card';
+@import 'blocks/footer';
 // @import 'blocks/menu';
 // @import 'blocks/accordion';
 // @import 'blocks/modal';
