--- a/css/style.css
+++ b/css/style.css
@@ -478,6 +478,9 @@ svg {
 .header__bar > * {
   margin-left: 20px;
 }
+.header__user {
+  position: relative;
+}
 .header__user-icon {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -508,6 +511,98 @@ svg {
   -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
+.header__user-menu {
+  width: 400px;
+  padding: 70px 20px 20px;
+  -webkit-box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.05), 60px 60px 80px rgba(0, 0, 0, 0.35);
+  box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.05), 60px 60px 80px rgba(0, 0, 0, 0.35);
+  border-radius: 40px 40px 40px 5px;
+  background-color: #E9E9E9;
+  position: absolute;
+  top: calc(100% + 20px);
+  right: 0;
+  z-index: 6;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+.header__user-menu.open {
+  opacity: 1;
+  visibility: visible;
+}
+.header__user-close {
+  width: 24px;
+  height: 24px;
+  background-color: #212629;
+  border-radius: 100%;
+  position: absolute;
+  top: 23px;
+  right: 20px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.header__user-close:after, .header__user-close:before {
+  content: "";
+  display: block;
+  width: 55%;
+  height: 2px;
+  background-color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+.header__user-close:after {
+  -webkit-transform: translate(-50%, -50%) rotate(45deg);
+  -ms-transform: translate(-50%, -50%) rotate(45deg);
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+.header__user-close:before {
+  -webkit-transform: translate(-50%, -50%) rotate(-45deg);
+  -ms-transform: translate(-50%, -50%) rotate(-45deg);
+  transform: translate(-50%, -50%) rotate(-45deg);
+}
+.header__user-list {
+  margin-bottom: 45px;
+}
+.header__user-list li {
+  border-top: 1px solid #fff;
+}
+.header__user-list li:last-child {
+  border-bottom: 1px solid #fff;
+}
+.header__user-list li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 17px 0;
+  color: #212629;
+}
+.header__user-list li a svg {
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+  margin-right: 20px;
+  fill: #212629;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+.header__user-list li a:hover {
+  color: #25D366;
+}
+.header__user-list li a:hover svg {
+  fill: #25D366;
+}
+.header__user-btn .btn {
+  width: 100%;
+}
 @media (max-width: 768px) {
   .header {
     padding: 40px 0 16px;
@@ -518,12 +613,40 @@ svg {
   .header__burger {
     display: block;
   }
-  .header__bar .btn {
+  .header__bar > .btn {
     display: none;
   }
   .header__user-icon {
     -webkit-box-shadow: none;
     box-shadow: none;
+  }
+}
+@media (max-width: 500px) {
+  .header__user-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    width: 100%;
+    border-radius: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: -500px;
+  }
+  .header__user-menu.open {
+    right: 0;
+  }
+  .header__user-list {
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    overflow-y: auto;
   }
 }
 
@@ -1440,6 +1563,8 @@ svg {
   color: #212629;
 }
 .footer__list li a svg {
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
   margin-right: 20px;
   fill: #212629;
   -webkit-transition: 0.3s;
