--- a/scss/blocks/card.scss
+++ b/scss/blocks/card.scss
@@ -2,7 +2,6 @@
 .card { 
   height: 100%;
   border-radius: 40px 40px 40px 4px;
-  background-color: $gray;
   cursor: pointer;
   user-select: none;
   position: relative;
@@ -181,7 +180,7 @@
   @media (min-width: $break_xs + 1) {
     &:hover {
       box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.05), 40px 40px 50px rgba(0, 0, 0, 0.5);
-  
+      z-index: 3;
       .card__content {
         background-color: $text;
         border-color: $text;
