--- a/scss/style.scss
+++ b/scss/style.scss
@@ -80,6 +80,7 @@ $gray: #E9E9E9;
 @import 'blocks/catalog';
 @import 'blocks/card';
 @import 'blocks/footer';
+@import 'blocks/mobile-menu';
 // @import 'blocks/menu';
 // @import 'blocks/accordion';
 // @import 'blocks/modal';
