--- a/scss/blocks/mobile-menu.scss
+++ b/scss/blocks/mobile-menu.scss
@@ -6,6 +6,7 @@
   max-width: 500px;
   padding: 70px 20px 20px;
   background-color: $gray;
+  box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.05), 60px 60px 80px rgba(0, 0, 0, 0.35);
   position: fixed;
   top: 0;
   bottom: 0;
