--- a/scss/style.scss
+++ b/scss/style.scss
@@ -81,6 +81,8 @@ $gray: #E9E9E9;
 @import 'blocks/card';
 @import 'blocks/footer';
 @import 'blocks/mobile-menu';
+@import 'blocks/backtitle';
+@import 'blocks/textblock';
 // @import 'blocks/menu';
 // @import 'blocks/accordion';
 // @import 'blocks/modal';
