--- a/pug/index.pug
+++ b/pug/index.pug
@@ -25,6 +25,8 @@ block content
               a(href="agreement.html") Пользовательское соглашение
             li 
               a(href="privacy.html") Политика конфиденциальности
+            li 
+              a(href="orders.html") Мои заказы
       //	/navpage
 
     include core/footer.pug
