--- a/scss/style.scss
+++ b/scss/style.scss
@@ -83,6 +83,7 @@ $gray: #E9E9E9;
 @import 'blocks/mobile-menu';
 @import 'blocks/backtitle';
 @import 'blocks/textblock';
+@import 'blocks/orders';
 // @import 'blocks/menu';
 // @import 'blocks/accordion';
 // @import 'blocks/modal';
