--- a/pug/index.pug
+++ b/pug/index.pug
@@ -27,6 +27,8 @@ block content
               a(href="privacy.html") Политика конфиденциальности
             li 
               a(href="orders.html") Мои заказы
+            li 
+              a(href="current-order.html") Текущий заказ
       //	/navpage
 
     include core/footer.pug
