--- a/scss/blocks/orders.scss
+++ b/scss/blocks/orders.scss
@@ -1,6 +1,7 @@
 /* orders */
 .orders { 
   padding-top: 20px;
+  padding-bottom: 100px;
   .backtitle {
     margin-bottom: 40px;
   }
@@ -107,6 +108,7 @@
   }
   @media (max-width: $break_sm) {
     padding-top: 0;
+    padding-bottom: 0;
     .backtitle {
       margin-bottom: 0;
     }
