--- a/scss/style.scss
+++ b/scss/style.scss
@@ -84,6 +84,7 @@ $gray: #E9E9E9;
 @import 'blocks/backtitle';
 @import 'blocks/textblock';
 @import 'blocks/orders';
+@import 'blocks/order';
 // @import 'blocks/menu';
 // @import 'blocks/accordion';
 // @import 'blocks/modal';
