--- a/pug/index.pug
+++ b/pug/index.pug
@@ -29,6 +29,10 @@ block content
               a(href="orders.html") Мои заказы
             li 
               a(href="current-order.html") Текущий заказ
+            li
+              a(href="completed-order.html") Заказ выполнен
+            li 
+              a(href="cancelled-order.html") Заказ отменен
       //	/navpage
 
     include core/footer.pug
