--- a/scss/blocks/btn.scss
+++ b/scss/blocks/btn.scss
@@ -46,6 +46,10 @@
       background-color: #fff;
     }
   }
+  &--white {
+    background: #FFFFFF;
+    box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.05), 15px 15px 20px rgba(0, 0, 0, 0.15);
+  }
   &:hover {
     box-shadow: 0 0 10px rgba(0,0,0,.2);
   }
