--- a/scss/blocks/order.scss
+++ b/scss/blocks/order.scss
@@ -4,6 +4,9 @@
   padding-bottom: 100px;
   .backtitle {
     margin-bottom: 58px;
+    &--mbsmall {
+      margin-bottom: 34px;
+    }
   }
   &__progress {
     display: flex;
@@ -154,6 +157,7 @@
     font-size: 18px;
     line-height: 20px;
     text-align: right;
+    white-space: nowrap;
   }
   &__rezults {
     margin-top: 40px;
@@ -195,6 +199,19 @@
   &__whatsapp-mobile {
     display: none;
   }
+  &__status-title {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 50px;
+    margin-bottom: 40px;
+    img {
+      display: block;
+      margin-bottom: 7px;
+    }
+    span {
+      display: block;
+    }
+  }
   @media (max-width: $break_lg) {
     &__food-title {
       font-size: 20px;
@@ -209,8 +226,19 @@
         padding: 20px 20px 10px;
       }
     }
+    &__status-title {
+      font-size: 30px;
+      line-height: 40px;
+    }
+    &__food-list {
+      width: auto;
+    }
+    &__food-price {
+      width: auto;
+    }
   }
   @media (max-width: $break_xs) {
+    padding-bottom: 70px;
     .backtitle {
       margin-bottom: 40px;
     }
@@ -247,6 +275,19 @@
     }
     &__buttons {
       display: none;
+    }
+    &__status-title {
+      font-size: 18px;
+      line-height: 20px;
+      text-align: center;
+    }
+  }
+  @media (max-width: 370px) {
+    &__food-title {
+      font-size: 16px;
+    }
+    &__food-list {
+      font-size: 10px;
     }
   }
 }
