--- a/scss/blocks/orders.scss
+++ b/scss/blocks/orders.scss
@@ -62,6 +62,10 @@
     background: rgba(255, 255, 255, 0.4);
     border-radius: 40px 40px 40px 5px;
     margin-bottom: 20px;
+    color: $text;
+    &:hover {
+      box-shadow: 10px 10px 20px rgba(0,0,0,.1);
+    }
   }
   &__item-content {
     
