--- a/scss/blocks/settings.scss
+++ b/scss/blocks/settings.scss
@@ -114,4 +114,17 @@ svg {
     }
   }
 }
+.floating-button {
+  display: none;
+  @media (max-width: $break_xs) {
+    display: block;
+    position: fixed;
+    bottom: 20px;
+    left: 30px;
+    right: 30px;
+    .btn {
+      width: 100%;
+    }
+  }
+}
 /* /settings */
