--- a/pug/index.pug
+++ b/pug/index.pug
@@ -33,6 +33,8 @@ block content
               a(href="completed-order.html") Заказ выполнен
             li 
               a(href="cancelled-order.html") Заказ отменен
+            li 
+              a(href="deposit.html") Депозит
       //	/navpage
 
     include core/footer.pug
