--- a/css/style.css
+++ b/css/style.css
@@ -2394,3 +2394,132 @@ svg {
 }
 
 /* /order */
+.deposit {
+  padding-top: 20px;
+  padding-bottom: 100px;
+}
+.deposit .backtitle {
+  margin-bottom: 34px;
+}
+.deposit__title {
+  font-weight: 700;
+  font-size: 224px;
+  line-height: 160px;
+  margin-bottom: 35px;
+  white-space: nowrap;
+}
+.deposit__text {
+  display: block;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 50px;
+  margin-bottom: 80px;
+}
+.deposit__ps {
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 20px;
+  margin-bottom: 20px;
+}
+.deposit__blackcard {
+  max-width: 460px;
+  padding: 30px;
+  background-color: #212629;
+  -webkit-box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.05), 40px 40px 50px rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.05), 40px 40px 50px rgba(0, 0, 0, 0.5);
+  border-radius: 40px 40px 40px 5px;
+  color: #fff;
+  position: relative;
+}
+.deposit__blackcard-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 25px;
+}
+.deposit__blackcard-price {
+  font-weight: 700;
+  font-size: 80px;
+  line-height: 80px;
+  margin-bottom: 25px;
+}
+.deposit__blackcard-text {
+  max-width: 260px;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 30px;
+}
+.deposit__blackcard-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 10px 30px;
+  background-color: #212629;
+  -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5), -1px -1px 6px rgba(255, 255, 255, 0.05), -5px -5px 20px rgba(255, 255, 255, 0.1), 5px 5px 20px rgba(0, 0, 0, 0.8);
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5), -1px -1px 6px rgba(255, 255, 255, 0.05), -5px -5px 20px rgba(255, 255, 255, 0.1), 5px 5px 20px rgba(0, 0, 0, 0.8);
+  border-radius: 99px;
+  border: none;
+  outline: none;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 20px;
+  color: #FE9102;
+  text-align: center;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+.deposit__blackcard-btn:hover {
+  color: #fff;
+}
+.deposit__blackcard-icon {
+  width: 40px;
+  position: absolute;
+  top: 30px;
+  right: 30px;
+}
+@media (max-width: 1200px) {
+  .deposit__title {
+    font-size: 120px;
+    line-height: 90px;
+    margin-bottom: 10px;
+  }
+}
+@media (max-width: 768px) {
+  .deposit {
+    padding-top: 0;
+  }
+}
+@media (max-width: 500px) {
+  .deposit .backtitle {
+    margin-bottom: 25px;
+  }
+  .deposit__title {
+    font-size: 70px;
+    line-height: 70px;
+    margin-bottom: 0;
+    text-align: center;
+  }
+  .deposit__text {
+    font-size: 18px;
+    line-height: 20px;
+    text-align: center;
+    margin-bottom: 64px;
+  }
+}
+@media (max-width: 370px) {
+  .deposit__title {
+    font-size: 50px;
+    line-height: 40px;
+  }
+  .deposit__blackcard-price {
+    font-size: 65px;
+    line-height: 65px;
+  }
+}
