--- a/pug/index.pug
+++ b/pug/index.pug
@@ -35,6 +35,8 @@ block content
               a(href="cancelled-order.html") Заказ отменен
             li 
               a(href="deposit.html") Депозит
+            li 
+              a(href="bankcard.html") Банковские карты
       //	/navpage
 
     include core/footer.pug
