--- a/pug/privacy.pug
+++ b/pug/privacy.pug
@@ -20,13 +20,13 @@ block content
 
           // backtitle
           .backtitle
-            a(href="#").backtitle__arrow 
+            a(href="home.html").backtitle__arrow 
               svg(width="22" height="17" viewBox="0 0 22 17" fill="none" xmlns="http://www.w3.org/2000/svg")
                 path(d="M1 8.09961H21" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round")
                 path(d="M1 8.09961L8.1 15.0996" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round")
                 path(d="M1 8.1L8.1 1" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round")
             h1.backtitle__text Политика конфиденциальности
-            a(href="#").backtitle__cross 
+            a(href="home.html").backtitle__cross 
           //	/backtitle
           
           .textblock__text
