--- a/scss/style.scss
+++ b/scss/style.scss
@@ -86,6 +86,7 @@ $gray: #E9E9E9;
 @import 'blocks/orders';
 @import 'blocks/order';
 @import 'blocks/deposit';
+@import 'blocks/bankcard';
 // @import 'blocks/menu';
 // @import 'blocks/accordion';
 // @import 'blocks/modal';
