--- a/css/style.css
+++ b/css/style.css
@@ -2494,6 +2494,7 @@ svg {
 @media (max-width: 768px) {
   .deposit {
     padding-top: 0;
+    padding-bottom: 50px;
   }
 }
 @media (max-width: 500px) {
@@ -2523,3 +2524,96 @@ svg {
     line-height: 65px;
   }
 }
+
+/* bankcard */
+.bankcard {
+  padding-top: 20px;
+  padding-bottom: 100px;
+}
+.bankcard .backtitle {
+  margin-bottom: 58px;
+}
+.bankcard__cards {
+  margin-bottom: 40px;
+}
+.bankcard__col {
+  width: 33.3333333333%;
+}
+@media screen and (max-width: 768px) {
+  .bankcard__col {
+    width: 50%;
+  }
+}
+@media screen and (max-width: 500px) {
+  .bankcard__col {
+    width: 100%;
+  }
+}
+.bankcard__card {
+  display: block;
+  -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.08), -1px -1px 6px rgba(255, 255, 255, 0.5), -5px -5px 20px #FFFFFF, 5px 5px 20px #D3D3D3;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.08), -1px -1px 6px rgba(255, 255, 255, 0.5), -5px -5px 20px #FFFFFF, 5px 5px 20px #D3D3D3;
+  border-radius: 13px;
+  background-color: #E9E9E9;
+  color: #212629;
+  position: relative;
+}
+.bankcard__card:after {
+  content: "";
+  display: block;
+  padding-top: 54%;
+}
+.bankcard__card:hover {
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  background-color: #fff;
+}
+.bankcard__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 20px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.bankcard__icon {
+  width: 45px;
+  margin-right: 15px;
+}
+.bankcard__title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 25px;
+}
+.bankcard__btn .btn {
+  width: 100%;
+  max-width: 320px;
+}
+@media (max-width: 768px) {
+  .bankcard {
+    padding-top: 0;
+    padding-bottom: 50px;
+  }
+}
+@media (max-width: 500px) {
+  .bankcard .backtitle {
+    margin-bottom: 40px;
+  }
+  .bankcard__cards {
+    margin-bottom: 30px;
+  }
+  .bankcard__card:after {
+    content: "";
+    display: block;
+    padding-top: 0;
+    height: 70px;
+  }
+  .bankcard__btn .btn {
+    max-width: none;
+  }
+}
+
+/* /bankcard */
