--- a/scss/blocks/deposit.scss
+++ b/scss/blocks/deposit.scss
@@ -95,6 +95,7 @@
   }
   @media (max-width: $break_sm) {
     padding-top: 0;
+    padding-bottom: 50px;
   }
   @media (max-width: $break_xs) {
     .backtitle {
